<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.components.ProductFragment" >

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginEnd="260dp"
        android:hint="@string/product_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:hint="@string/product_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/product_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantityLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/idLabel"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/product_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>