<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/latitudeInput"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/longitudeInput"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />

    <EditText
        android:id="@+id/radiusInput"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/radius_km_to_find_stores_in"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeInput" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="290dp"
        android:text="@string/food_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiusInput" />
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/foodTypeChips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <!--            android:layout_marginStart="55dp"-->
            <!--            android:layout_marginEnd="54dp"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/textView3"-->
            <com.google.android.material.chip.Chip
                android:id="@+id/pizzeriaChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/pizzeriaChip" />
        </com.google.android.material.chip.ChipGroup>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="290dp"
        android:text="@string/star_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView1" />
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/starChips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck">
            <!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
            <!--            android:layout_marginEnd="54dp"-->
            <!--            android:layout_marginStart="55dp"-->
        <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/oneStarChip" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/twoStarChip" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/threeStarChip" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/fourStarChip" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/fiveStarChip" />
        </com.google.android.material.chip.ChipGroup>
    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="290dp"
        android:text="@string/price_range"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/priceChips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2"-->
            <!--            android:layout_marginEnd="54dp"-->
            <!--            android:layout_marginStart="55dp"-->
            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/cheapChip" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/midPricedChip" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/expensiveChip" />
        </com.google.android.material.chip.ChipGroup>
    </ScrollView>

    <Button
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="9dp"
        android:onClick="onFilterButtonClicked"
        android:text="@string/filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

</androidx.constraintlayout.widget.ConstraintLayout>